@@ -1,3 +1,4 @@
+/* $OpenBSD: sandbox-systrace.c,v 1.3 2011/06/23 09:34:13 djm Exp $ */
 /*
  * Copyright (c) 2011 Damien Miller <djm@mindrot.org>
  *
@@ -37,7 +38,7 @@
 
 #include "atomicio.h"
 #include "log.h"
-#include "sandbox.h"
+#include "ssh-sandbox.h"
 #include "xmalloc.h"
 
 static const int preauth_policy[] = {
